Update README, CHANGELOG and index
fix: rebrand netflix-india-clone to streaming-platform-ui for trademark compliance
Tag: v1.0.1

--- a/index.html
+++ b/index.html
@@ -94,18 +94,16 @@
                     </div>
                 </article>
 
-                <!-- Netflix India Clone -->
+                <!-- Streaming UI Platform -->
                 <article class="card a-underline">
-                    <img src="assets/images/web-netflix-india-demo.png" alt="Netflix India Clone" class="card-img">
-                    <h3 class="card-title">Netflix UI-UX Clone</h3>
+                    <img src="assets/images/web-stream-ui-demo.png" alt="Netflix India Clone" class="card-img">
+                    <h3 class="card-title">Streaming UI Platform</h3>
                     <p class="card-desc">A clone of Netflix landing page made by me.</p>
                     <div class="card-links">
-                        <a target="_blank" href="https://dipsana.github.io/netflix-india-clone/"
-                            class="card-link">Netflix
-                            UI-UX Clone Preview</a>
-                        <a target="_blank" href="https://github.com/dipsana/netflix-india-clone.git"
-                            class="card-link">Netflix UI-UX
-                            Clone Source Code</a>
+                        <a target="_blank" href="https://dipsana.github.io/streaming-platform-ui/"
+                            class="card-link">Streaming UI Platform Preview</a>
+                        <a target="_blank" href="https://github.com/dipsana/streaming-platform-ui.git"
+                            class="card-link">Streaming UI Platform Source Code</a>
                     </div>
                 </article>
 
