Update index & documentation
Source Code: Updated Historian Estimator Preview with YouTube link
Docs: Synchronized with the latest update 
Tag: v1.0.2

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <h3 class="card-title">Historians Estimator</h3>
                     <p class="card-desc">C console-based program to compare difference between two dates.</p>
                     <div class="card-links">
-                        <a target="_blank" href="https://replit.com/@dipsana/Date-Comparison?v=1">Historians Estimator
+                        <a target="_blank" href="https://youtu.be/yKSScHqfrqE">Historians Estimator
                             Preview</a>
                         <a target="_blank" href="https://github.com/dipsana/historian-estimator.git">Historians
                             Estimator
