feat: update recent projects sect with SoundScript

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
         <section id="recent-projects">
             <h2>My Recent Projects</h2>
             <div class="cards">
-                <!-- XO Time -->
+                <!-- SoundScript -->
                 <article class="card a-underline">
-                    <img src="assets/images/web-xo-1.png" alt="XO Time" class="card-img">
-                    <h3 class="card-title">XO Time</h3>
-                    <p class="card-desc">A simple game built using vanilla JavaScript.</p>
+                    <img src="assets/images/soundscript-home.png" alt="SoundScript" class="card-img">
+                    <h3 class="card-title">SoundScript</h3>
+                    <p class="card-desc">A high-performance web player.</p>
                     <div class="card-links">
-                        <a target="_blank" href="https://dipsana.github.io/xo-time/">Tic Tac Toe Preview</a>
-                        <a target="_blank" href="https://github.com/dipsana/xo-time.git">Tic Tac Toe Source Code</a>
+                        <a target="_blank" href="https://dipsana.github.io/soundscript/">SoundScript Preview</a>
+                        <a target="_blank" href="https://github.com/dipsana/soundscript.git">SoundScript Source Code</a>
                     </div>
                 </article>
 
